--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     body {
       min-height: 100vh;
       padding-top: 148px; /* Accommodates logo height (128px) + 20px gap */
-      padding-bottom: 400px; /* Adjusted to ensure maxClientsContainer is visible just below white box */
+      padding-bottom: 200px; /* Reduced to minimize black space below maxClientsContainer */
     }
 
     #messages {
@@ -85,7 +85,7 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -360px; /* Adjusted to position just below white box and help link */
+        bottom: -380px; /* Adjusted to position just below white box with ~20px gap */
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
