--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
     .corner-logo.wink {
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
     }
+    .bg-white {
+      z-index: 10; /* Ensure white chat box is above logo on all screen sizes */
+    }
+    @media (min-width: 641px) and (max-width: 1024px) {
+      .corner-logo {
+        z-index: -1; /* Place logo behind white chat box on tablet */
+      }
+    }
     @media (max-width: 640px) {
       .corner-logo {
         position: absolute;
@@ -72,7 +80,7 @@
         right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 1000; /* Ensure it stays above content */
+        z-index: 1000; /* High z-index on mobile to stay above content */
       }
       /* Specific logo positioning for waiting state on mobile */
       #chatContainer:not(.hidden) #messages.waiting ~ .corner-logo {
@@ -336,7 +344,7 @@
       </div>
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-gray-800 p-4 rounded-lg shadow-lg">
-      <span class="text-white mb-2 font-bold">Max Users</span>
+      <span class="text-white mb-2 font-bold">Max<br>Users:</span>
       <div id="maxClientsRadios" class="flex flex-col space-y-2"></div>
     </div>
   </div>
