--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     body {
       min-height: 100vh;
-      padding-top: 20px; /* Reduced for PC to bring white box higher */
+      padding-top: 60px; /* Reduced for PC to bring white box higher */
       padding-bottom: 200px; /* Accommodates maxClientsContainer */
     }
 
@@ -96,7 +96,7 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -380px; /* Positioned ~20px below white box and help link */
+        bottom: -508px; /* Adjusted to position ~20px below white box and help link */
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
@@ -347,7 +347,7 @@
       </div>
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-gray-800 p-4 rounded-lg shadow-lg">
-      <span class="text-white mb-2 font-bold">Max<br>Users:</span>
+      <span class="text-white mb-2 font-bold">Max Users</span>
       <div id="maxClientsRadios" class="flex flex-col space-y-2"></div>
     </div>
   </div>
