--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -380px; /* Restored to position ~20px below white box and help link */
+        bottom: -450px; /* Adjusted to position ~20px below white box and help link */
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
