--- a/index.html
+++ b/index.html
@@ -7,27 +7,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
   <style>
-    /* Global cursor and selection style: no pointer or caret on non-inputs */
     * {
       cursor: default;
-      user-select: none; /* Prevents text selection and caret */
+      user-select: none;
     }
     input[type="text"],
     input[type="number"],
     textarea {
       cursor: text;
-      user-select: text; /* Allows selection and caret in inputs */
+      user-select: text;
     }
     #codeDisplay {
-      user-select: text; /* Allows copying the code text */
+      user-select: text;
     }
-
     body {
       min-height: 100vh;
-      padding-top: 60px; /* Reduced for PC to bring white box higher */
-      padding-bottom: 200px; /* Accommodates maxClientsContainer */
+      padding-top: 60px;
+      padding-bottom: 200px;
     }
-
     #messages {
       display: flex;
       flex-direction: column-reverse;
@@ -66,16 +63,16 @@
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
     }
     .bg-white {
-      z-index: 10; /* Ensure white chat box is above logo on all screen sizes */
+      z-index: 10;
     }
     @media (min-width: 641px) and (max-width: 1024px) {
       .corner-logo {
-        z-index: -1; /* Place logo behind white chat box on tablet */
+        z-index: -1;
       }
     }
     @media (max-width: 640px) {
       body {
-        padding-top: 148px; /* Restore original padding for mobile to accommodate smaller logo */
+        padding-top: 148px;
       }
       .corner-logo {
         position: absolute;
@@ -83,12 +80,11 @@
         right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 1000; /* High z-index on mobile to stay above content */
+        z-index: 1000;
       }
-      /* Specific logo positioning for waiting state on mobile */
       #chatContainer:not(.hidden) #messages.waiting ~ .corner-logo {
         position: absolute;
-        top: 10px; /* Positioned at top of page relative to body */
+        top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
@@ -96,67 +92,43 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -350px; /* Adjusted to position ~10px below white chat box */
+        bottom: -350px; /* Your working value for initial state */
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
-        max-width: 360px; /* Wide enough for radio buttons */
+        max-width: 360px;
         margin: 0;
         padding: 0.75rem;
-        background-color: #000000; /* Solid black background */
+        background-color: #000000;
         border-radius: 0.5rem;
         z-index: 1000;
       }
+      #chatContainer:not(.hidden) #maxClientsContainer {
+        bottom: -47px; /* Adjusted for chat page, ~10px below .bg-white */
+      }
       #maxClientsRadios {
         display: grid;
-        grid-template-columns: repeat(5, minmax(0, 1fr)); /* Five columns for 2-6 */
-        grid-template-rows: auto auto; /* Two rows */
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        grid-template-rows: auto auto;
         grid-gap: 0.75rem;
         justify-items: center;
       }
-      #maxClientsRadios label:nth-child(1) {
-        grid-row: 1;
-        grid-column: 1; /* 2 under column 1 */
-      }
-      #maxClientsRadios label:nth-child(2) {
-        grid-row: 1;
-        grid-column: 2; /* 3 under column 2 */
-      }
-      #maxClientsRadios label:nth-child(3) {
-        grid-row: 1;
-        grid-column: 3; /* 4 under column 3 */
-      }
-      #maxClientsRadios label:nth-child(4) {
-        grid-row: 1;
-        grid-column: 4; /* 5 under column 4 */
-      }
-      #maxClientsRadios label:nth-child(5) {
-        grid-row: 1;
-        grid-column: 5; /* 6 under column 5 */
-      }
-      #maxClientsRadios label:nth-child(6) {
-        grid-row: 2;
-        grid-column: 1; /* 7 under 2 */
-      }
-      #maxClientsRadios label:nth-child(7) {
-        grid-row: 2;
-        grid-column: 2; /* 8 under 3 */
-      }
-      #maxClientsRadios label:nth-child(8) {
-        grid-row: 2;
-        grid-column: 3; /* 9 under 4 */
-      }
-      #maxClientsRadios label:nth-child(9) {
-        grid-row: 2;
-        grid-column: 4; /* 10 under 5 */
-      }
+      #maxClientsRadios label:nth-child(1) { grid-row: 1; grid-column: 1; }
+      #maxClientsRadios label:nth-child(2) { grid-row: 1; grid-column: 2; }
+      #maxClientsRadios label:nth-child(3) { grid-row: 1; grid-column: 3; }
+      #maxClientsRadios label:nth-child(4) { grid-row: 1; grid-column: 4; }
+      #maxClientsRadios label:nth-child(5) { grid-row: 1; grid-column: 5; }
+      #maxClientsRadios label:nth-child(6) { grid-row: 2; grid-column: 1; }
+      #maxClientsRadios label:nth-child(7) { grid-row: 2; grid-column: 2; }
+      #maxClientsRadios label:nth-child(8) { grid-row: 2; grid-column: 3; }
+      #maxClientsRadios label:nth-child(9) { grid-row: 2; grid-column: 4; }
       #maxClientsRadios label {
         margin: 0;
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
-        font-size: 0.9rem; /* Slightly smaller font for better fit */
+        font-size: 0.9rem;
       }
       #maxClientsRadios input[type="radio"] {
         margin-right: 0.25rem;
@@ -384,7 +356,7 @@
     }
     let isInitiator = false;
     let isConnected = false;
-    let maxClients = 2; // Default to 2, capped at 10
+    let maxClients = 2;
     let totalClients = 0;
     let peerConnections = new Map();
     let dataChannels = new Map();
@@ -397,7 +369,7 @@
     let username = localStorage.getItem('username') || '';
     let usernames = new Map();
     const messageRateLimits = new Map();
-    let codeSentToRandom = false; // Track if code was sent to random board
+    let codeSentToRandom = false;
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -416,18 +388,16 @@
     document.getElementById('usernameInput').value = username;
     document.getElementById('usernameConnectInput').value = username;
 
-    // Logo cycle animation (start with normal logo, wink every 60 seconds)
     let cycleTimeout;
     function triggerCycle() {
       if (cycleTimeout) clearTimeout(cycleTimeout);
       cornerLogo.classList.add('wink');
       cycleTimeout = setTimeout(() => {
         cornerLogo.classList.remove('wink');
-      }, 500); // 0.5 seconds for wink
-      setTimeout(() => triggerCycle(), 60000); // Repeat every 60 seconds
+      }, 500);
+      setTimeout(() => triggerCycle(), 60000);
     }
-    setTimeout(() => triggerCycle(), 60000); // Start first wink after 60 seconds
-    // Initial state is normal logo, no wink on load
+    setTimeout(() => triggerCycle(), 60000);
 
     const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
     console.log('WebSocket created');
@@ -438,7 +408,6 @@
       if (socket.readyState === WebSocket.OPEN) {
         socket.send(JSON.stringify({ type: 'connect', clientId }));
       }
-      // Check for code parameter on page load
       const urlParams = new URLSearchParams(window.location.search);
       const codeParam = urlParams.get('code');
       if (codeParam && validateCode(codeParam)) {
@@ -499,7 +468,7 @@
         }
         if (message.type === 'init') {
           clientId = message.clientId;
-          maxClients = Math.min(message.maxClients, 10); // Cap maxClients at 10
+          maxClients = Math.min(message.maxClients, 10);
           isInitiator = message.isInitiator;
           totalClients = 1;
           console.log(`Initialized client ${clientId}, username: ${username}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
@@ -537,7 +506,7 @@
           }
         }
         if (message.type === 'max-clients') {
-          maxClients = Math.min(message.maxClients, 10); // Cap maxClients at 10
+          maxClients = Math.min(message.maxClients, 10);
           console.log(`Max clients updated to ${maxClients} for code: ${code}`);
           updateMaxClientsUI();
         }
@@ -563,7 +532,7 @@
       maxClientsRadios.innerHTML = '';
       if (isInitiator) {
         maxClientsContainer.classList.remove('hidden');
-        for (let n = 2; n <= 10; n++) { // Limit options to 10
+        for (let n = 2; n <= 10; n++) {
           const label = document.createElement('label');
           label.className = 'text-white flex items-center';
           const input = document.createElement('input');
@@ -605,7 +574,7 @@
 
     function setMaxClients(n) {
       if (isInitiator && clientId && socket.readyState === WebSocket.OPEN) {
-        maxClients = Math.min(n, 10); // Cap at 10
+        maxClients = Math.min(n, 10);
         socket.send(JSON.stringify({ type: 'set-max-clients', maxClients: maxClients, code, clientId }));
         updateMaxClientsUI();
       }
@@ -1114,7 +1083,7 @@
       }
     });
 
-    copyCodeButton.onclick = () => {
+    document.getElementById('copyCodeButton').onclick = () => {
       const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
       navigator.clipboard.writeText(codeText).then(() => {
         copyCodeButton.textContent = 'Copied!';
@@ -1146,7 +1115,6 @@
       }
     };
 
-    // Function to handle automatic connection with a code parameter
     function autoConnect(codeParam) {
       connectContainer.classList.remove('hidden');
       initialContainer.classList.add('hidden');
