--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -350px; /* Your working value for initial state */
+        bottom: -350px; /* Initial state, worked for you */
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
@@ -104,7 +104,7 @@
         z-index: 1000;
       }
       #chatContainer:not(.hidden) #maxClientsContainer {
-        bottom: -350px; /* Adjusted for chat page, ~10px below .bg-white */
+        bottom: -47px; /* Chat page, ~10px below white box */
       }
       #maxClientsRadios {
         display: grid;
