--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         z-index: 1000;
       }
       #chatContainer:not(.hidden) #maxClientsContainer {
-        bottom: -47px; /* Chat page, ~10px below white box */
+        bottom: -70px !important; /* Chat page, ~10px below white box */
       }
       #maxClientsRadios {
         display: grid;
