--- a/index.html
+++ b/index.html
@@ -302,6 +302,12 @@
         margin-bottom: 0;
       }
     }
+  /* Add this new media query */
+  @media (min-width: 1025px) {
+    .bg-white {
+      margin-top: -37.8px; /* Moves the white box up by ~1cm */
+    }
+  }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
