--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
       margin-top: -37.8px; /* Moves the white box up by ~1cm */
     }
   }
+      /* New change: Increase #maxClientsContainer height by 1cm on PC */
+    @media (min-width: 1025px) {
+      #maxClientsContainer {
+        min-height: calc(100% - 100px); /* Adds ~1cm to match white box height */
+      }
+    }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
