--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       /* New change: Increase #maxClientsContainer height by 1cm on PC */
     @media (min-width: 1025px) {
       #maxClientsContainer {
-        min-height: calc(100% - 100px); /* Adds ~1cm to match white box height */
+        min-height: calc(100% -100px); /* Adds ~1cm to match white box height */
       }
     }
   </style>
