--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     @media (min-width: 1025px) {
       #maxClientsContainer {
         min-height: calc(100% + 37.8px); /* Adds ~1cm to match white box height */
-        margin-top: -37.8px; /* Aligns with white box by matching its upward shift */
+        margin-top: +37.8px; /* Aligns with white box by matching its upward shift */
       }
     }
   </style>
