--- a/index.html
+++ b/index.html
@@ -315,6 +315,11 @@
         margin-top: +140px; /* Aligns with white box by matching its upward shift */
       }
     }
+    @media (min-width: 641px) and (max-width: 1024px) {
+  #maxClientsContainer {
+    margin-top: 140px; /* Sets +140px margin to align with PC version */
+  }
+}
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
